Closed Bug 295527 Opened 21 years ago Closed 20 years ago

Loading EVE Online site without flash plugin causes rendering error

Categories

(Core :: Layout: Tables, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.8beta4

People

(Reporter: geoffw22, Assigned: roc)

References

()

Details

(Keywords: regression, testcase)

Attachments

(5 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050523 Firefox/1.0+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050523 Firefox/1.0+ If you navigate to the EVE Online website without the flah player plugin installed www.eve-online.com, on load the page just keeps increasing in horizonatal lenght, once flah is installed the website displays fiine Reproducible: Always Steps to Reproduce: 1. Remove Flash Plugin / Use clean install 2. Go to www.eve-online.com 3. Actual Results: website constantly gains horizontal width Expected Results: website should display fine with the space for the flash movie just showing the plugin required green box thingy
-> PFS
Component: General → Plugin Finder Service
QA Contact: general → plugin.finder
Attached file Testcase
The testcase case has an <embed> with width="100%" inside a table. This is when people are starting to talk about mew and stuff (not that I know what it means).
Status: UNCONFIRMED → NEW
Component: Layout → Layout: Tables
Ever confirmed: true
Keywords: testcase
QA Contact: plugin.finder → layout.tables
I´m seeing this bug in Deerpark, but not in Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8b2) Gecko/20050524
yeah this differs between ff and the suite where it is wfm, ff is doing something fancy but I have no idea where and how that does happen.
Attached file what I backed out
when I back out this part, the bug doesn't happen. So it looks like this is a regression of bug 245349.
Blocks: 245349
Summary: Loading EVE Online site without flah plugin causes rendering error → Loading EVE Online site without flash plugin causes rendering error
Flags: blocking1.8b3?
I don't have a ff build, SizeAnchor is evil as stated in the code // SizeAnchor() is seriously evil as it ends up setting an // attribute (through the style changes that it does) while // we're in reflow. This is also seriously evil, as it pulls // that reflow command out of the reflow queue, as leaving it // there can get us into infinite loops while reflowing object // frames for missing plugins. Adding jst to CC as he checked in this code, what happens here is exactly what the comment promises
Flags: blocking1.8b4?
Flags: blocking1.8b3?
Flags: blocking1.8b3-
Blocks: 300729
Blocks: 299583
*** Bug 300729 has been marked as a duplicate of this bug. ***
Arron, can you look into this please?
Assignee: nobody → aaronleventhal
All my patch in bug 245349 did was change the <div> which was already there to use an <a>. Because of that, I renamed jst's method to SizeAnchor. Since my <a> is styled as display:block, it should just work the same. I wish jst or someone a little more familiar with layout would look into it. Otherwise, I'll just backout bug 245349, since I don't really have time to investigate this weirdness. Another fix that is possible now is to go back to the code which used a div, and now use SetAttributeNS to assign it xhtml2:role="wairole:link". Also set the tabindex to 0. Maybe that would fix it, although we wouldn't be looking at the root of the problem. Jst, why would your "evil" SizeDiv() not work if I change it to an <a> with display:block?
My bets here would be on bug 288117 (and I thought we had a bug report on this already...)
I think what happens here is the following sequence: Child has some width:NNNpx set in its style **** Reflow K -- Table reflows the objectframe with unconstrained width -- Objectframe does GetDesiredSize, gets the default width (320) -- Sets the child's style to width:320px (posts restyle event) -- We reflow the child, its reflow state mComputedWidth is taken from the old style context = NNNpx -- Child returns MEW NNN+12px (because it includes border+padding!) -- table decides the cell needs to be NNN+12px -- Table reflows the objectframe with constrained width NNN+12px -- Objectframe does GetDesiredSize, gets the new width NNN+12px -- Sets the child's style to width:NNN+12px (posts another restyle event, which is coalesced I guess) -- We reflow the child, its reflow state mComputedWidth is taken from the same old style context (because we haven't done the restyle event yet) = NNNpx -- Child returns MEW NNN+12px again -- Table is done Now the restyle event fires, the table has NNN+12px set in its style context, and we do another iteration.
I think at the least, SizeAnchor should subtract the child's border and padding before setting mComputedWidth/mComputedHeight. Ideally all this code would be thrown to the bottom of the sea
Attached patch fixSplinter Review
This fixes the bug. It even makes sense.
Assignee: aaronleventhal → roc
Status: NEW → ASSIGNED
Attachment #189990 - Flags: superreview?(dbaron)
Attachment #189990 - Flags: review?(dbaron)
All this code will be at the bottom of the sea by the time 1.9a wraps up....
*** Bug 299583 has been marked as a duplicate of this bug. ***
Attachment #189990 - Flags: superreview?(dbaron)
Attachment #189990 - Flags: superreview+
Attachment #189990 - Flags: review?(dbaron)
Attachment #189990 - Flags: review+
The fix also fixes the too big placeholders I was seeing at various places of the web (which caused it to partly overlap text, etc).
Comment on attachment 189990 [details] [diff] [review] fix fixes a layout regression
Attachment #189990 - Flags: approval1.8b4?
Attachment #189990 - Flags: approval1.8b4? → approval1.8b4+
checked in
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Flags: blocking1.8b4?
Works fine with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050725 Firefox/1.0+ v.
Status: RESOLVED → VERIFIED
Target Milestone: --- → mozilla1.8beta4
*** Bug 283206 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: