Bug 295527. nsObjectFrame child-size-setting-hack should use the content size, not the border-box size. r+sr=dbaron,a=bsmedberg